--- a/NiziKit.Editor/Views/Editors/Vector3Editor.axaml
+++ b/NiziKit.Editor/Views/Editors/Vector3Editor.axaml
@@ -7,19 +7,19 @@
         <views:DraggableValueEditor Grid.Column="0"
                                     x:Name="XEditor"
                                     Label="X"
-                                    LabelColor="#E06060"
+                                    LabelColor="{DynamicResource AxisXBrush}"
                                     DragSensitivity="0.05"
                                     Margin="0,0,4,0"/>
         <views:DraggableValueEditor Grid.Column="1"
                                     x:Name="YEditor"
                                     Label="Y"
-                                    LabelColor="#60E060"
+                                    LabelColor="{DynamicResource AxisYBrush}"
                                     DragSensitivity="0.05"
                                     Margin="0,0,4,0"/>
         <views:DraggableValueEditor Grid.Column="2"
                                     x:Name="ZEditor"
                                     Label="Z"
-                                    LabelColor="#6060E0"
+                                    LabelColor="{DynamicResource AxisZBrush}"
                                     DragSensitivity="0.05"/>
     </Grid>
 </UserControl>
