--- a/NiziKit.Editor/Views/Editors/AssetPickerDialog.axaml
+++ b/NiziKit.Editor/Views/Editors/AssetPickerDialog.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="NiziKit.Editor.Views.Editors.AssetPickerDialog">
 
-    <Border Background="#E0202020"
+    <Border Background="{DynamicResource DialogBackgroundBrush}"
             CornerRadius="8"
             BorderBrush="{DynamicResource PanelBorderBrush}"
             BorderThickness="1"
