--- a/NiziKit.Editor/Views/SceneTreeView.axaml
+++ b/NiziKit.Editor/Views/SceneTreeView.axaml
@@ -31,11 +31,12 @@
                 <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="vm:GameObjectViewModel">
                     <StackPanel Orientation="Horizontal" Spacing="8">
                         <PathIcon Data="{Binding TypeIconData}"
-                                  Width="18" Height="18"
+                                  Width="20" Height="20"
                                   Foreground="{Binding TypeIconColor}"
                                   VerticalAlignment="Center"
                                   Opacity="{Binding IsActive, Converter={x:Static vm:GameObjectViewModel.ActiveToOpacityConverter}}"/>
                         <TextBlock Text="{Binding Name}"
+                                   FontSize="{DynamicResource EditorFontSizeNormal}"
                                    VerticalAlignment="Center"
                                    Foreground="{Binding IsActive, Converter={StaticResource BoolToForegroundConverter}}"/>
                     </StackPanel>
@@ -52,7 +53,7 @@
         <Border Grid.Row="1"
                 x:Name="DeleteConfirmPanel"
                 IsVisible="False"
-                Background="#C0401818"
+                Background="{DynamicResource DangerBackgroundBrush}"
                 BorderBrush="{DynamicResource DangerBrush}"
                 BorderThickness="1"
                 CornerRadius="{DynamicResource EditorControlCornerRadius}"
